contrast issues

--- a/Chamber/styles/base.css
+++ b/Chamber/styles/base.css
@@ -7,6 +7,8 @@
     --accent2-color: #99dee4;
     --accent3-color: #ff9d00;
     --accent4-color: #eaeaea;
+    --accent5-color: #fe5b2e;
+    
 
     /* fonts */
     --heading-font: "IM Fell French Canon";
@@ -345,18 +347,18 @@ main  img {
 main .hero-message h3 {
     position: relative;
     z-index: 1;
-    color: var(--accent3-color);
+    color: var(--accent5-color);
     font-size: .6rem;
 }
 main .hero-message h1 {
     position: relative;
-    color: var(--accent3-color);
+    color: var(--accent5-color);
     font-size: 1rem;
     z-index: 1;
 }
 main .hero-message h2 {
     position: relative;
-    color: var(--accent3-color);
+    color: var(--accent5-color);
     font-size: .7rem;
     z-index: 1;
 }
@@ -424,7 +426,7 @@ section {
     align-items: center;
     text-decoration: none;
     border: var(--accent3-color) solid;
-    color: var(--accent3-color);
+    color: var(--accent5-color);
     margin-left: 65px;
     margin-right: 75px;
     border-radius: 25px;
@@ -493,7 +495,6 @@ footer {
     border-radius: 50px
 }
 footer h2 {
-    color: var(--accent3-color);
     font-size: .8rem;
     margin-bottom: 10px;
 }
@@ -525,7 +526,7 @@ footer .location {
     justify-content: center;
 }
 .contact-info h2{
-    color: var(--accent3-color);
+    color: var(--accent5-color);
     font-size: 1rem;
 }
 .sitespecifics {
